--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <button onclick="nextQuestion(2)">Море и пляж ☀️</button>
     <button onclick="nextQuestion(2)">Горы и природа 🌲</button>
     <button onclick="nextQuestion(2)">Города и культура 🌍</button>
-    <button onclick="nextQuestion(2)">Еда 🍜</button>
+    <button onclick="nextQuestion(2)">Еда и застолья 🍜</button>
   </div>
 
   <div class="question" id="q2">
@@ -148,3 +148,4 @@
   </script>
 </body>
 </html>
+
