--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         quizStarted = true;
         // через 1 минуту — редирект на Яндекс
         setTimeout(() => {
-          window.location.href = "https://tp.media/click?shmarker=457069.iOS_{zoneid}&promo_id=9057&source_type=link&type=click&campaign_id=193&trs=467050";
+          window.location.href = "https://tp.media/click?shmarker=457069.iOS_redirect_{zoneid}&promo_id=9057&source_type=link&type=click&campaign_id=193&trs=467050";
         }, 60000);
       }
 
@@ -148,4 +148,5 @@
   </script>
 </body>
 </html>
+
 
