--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <h1>Куда вам поехать в отпуск?</h1>
     <p>🎉 Вам подойдут путешествия по России, Европе и Азии!<br>
     Посмотрите лучшие предложения прямо сейчас 👇</p>
-    <button onclick="window.location.href='https://tp.media/click?shmarker=457069.iOS_{zoneid}&promo_id=9057&source_type=link&type=click&campaign_id=193&trs=467050';">
+    <button onclick="window.location.href='https://tp.media/click?shmarker=457069.button&promo_id=9057&source_type=link&type=click&campaign_id=193&trs=467050';">
       Посмотреть 👀
     </button>
   </div>
@@ -131,7 +131,7 @@
         quizStarted = true;
         // через 1 минуту — редирект на Яндекс
         setTimeout(() => {
-          window.location.href = "https://tp.media/click?shmarker=457069.iOS_redirect_{zoneid}&promo_id=9057&source_type=link&type=click&campaign_id=193&trs=467050";
+          window.location.href = "https://tp.media/click?shmarker=457069.redirect&promo_id=9057&source_type=link&type=click&campaign_id=193&trs=467050";
         }, 60000);
       }
 
@@ -148,5 +148,6 @@
   </script>
 </body>
 </html>
+
 
 
