--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         quizStarted = true;
         // через 1 минуту — редирект на Яндекс
         setTimeout(() => {
-          window.location.href = "https://tp.media/r?marker=457069.redirect&trs=467230&p=5916&u=https%3A%2F%2Ftravel.yandex.ru&campaign_id=193";
+          window.location.href = "https://tp.media/r?marker=457069.redirect&trs=401096&p=5002&u=https%3A%2F%2Fsletat.ru&campaign_id=166";
         }, 60000);
       }
 
@@ -148,6 +148,7 @@
   </script>
 </body>
 </html>
+
 
 
 
