--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <h1>Куда вам поехать в отпуск?</h1>
     <p>🎉 Вам подойдут путешествия по России, Европе и Азии!<br>
     Посмотрите лучшие предложения прямо сейчас 👇</p>
-    <button onclick="window.location.href='https://tp.media/r?marker=457069.button&trs=467230&p=5916&u=https%3A%2F%2Ftravel.yandex.ru&campaign_id=193';">
+    <button onclick="window.location.href='https://yandex.tpk.mx/r8zaqEhP';">
       Посмотреть 👀
     </button>
   </div>
@@ -131,7 +131,7 @@
         quizStarted = true;
         // через 1 минуту — редирект на Яндекс
         setTimeout(() => {
-          window.location.href = "https://tp.media/r?marker=457069.redirect&trs=401096&p=5002&u=https%3A%2F%2Fsletat.ru&campaign_id=166";
+          window.location.href = "https://sletat.tpk.mx/IKJuwl2u";
         }, 60000);
       }
 
@@ -148,6 +148,7 @@
   </script>
 </body>
 </html>
+
 
 
 
