--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 
   <!-- Контент -->
   <div class="question active" id="q1">
-    <h1>Какой тип отдыха вам ближе?</h1>
+    <h1>✈️ Узнайте, куда вам стоит поехать в отпуск!</h1>
+    <h2>Какой тип отдыха вам ближе?</h2>
     <button onclick="nextQuestion(2)">Море и пляж ☀️</button>
     <button onclick="nextQuestion(2)">Горы и природа 🌲</button>
     <button onclick="nextQuestion(2)">Города и культура 🌍</button>
@@ -148,6 +149,7 @@
   </script>
 </body>
 </html>
+
 
 
 
