--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
   <!-- Контент -->
   <div class="question active" id="q1">
     <h1>✈️ Узнайте, куда вам стоит поехать в отпуск!</h1>
-    <h2>Какой тип отдыха вам ближе?</h2>
+    <h2>Что вам важнее всего на отдыхе?</h2>
     <button onclick="nextQuestion(2)">Море и пляж ☀️</button>
     <button onclick="nextQuestion(2)">Горы и природа 🌲</button>
     <button onclick="nextQuestion(2)">Города и культура 🌍</button>
-    <button onclick="nextQuestion(2)">Еда и застолья 🍜</button>
+    <button onclick="nextQuestion(2)">Еда и вечеринки 🍜</button>
   </div>
 
   <div class="question" id="q2">
@@ -149,6 +149,7 @@
   </script>
 </body>
 </html>
+
 
 
 
