--- a/index.html
+++ b/index.html
@@ -109,13 +109,21 @@
     <button onclick="nextQuestion(3)">До 100 000 ₽ 💸💸</button>
     <button onclick="nextQuestion(3)">Больше 100 000 ₽ 💸💸💸</button>
   </div>
-
+  
   <div class="question" id="q3">
+    <h1>Когда планируете отпуск?</h1>
+    <button onclick="nextQuestion(4)">Осенью 🍂</button>
+    <button onclick="nextQuestion(4)">Зимой ❄️</button>
+    <button onclick="nextQuestion(4)">Весной 🌸</button>
+    <button onclick="nextQuestion(4)">Летом ☀️</button>
+  </div>
+  
+  <div class="question" id="q4">
     <h1>🔍 Подбираем лучшие направления...</h1>
     <p>Секунду, анализируем предложения туроператоров и отелей 🧭</p>
   </div>
 
-  <div class="question" id="q4">
+  <div class="question" id="q5">
     <h1>Куда вам поехать в отпуск?</h1>
     <p>🎉 Вам подойдут путешествия по России, Европе и Азии!<br>
     Посмотрите лучшие предложения прямо сейчас 👇</p>
@@ -149,6 +157,7 @@
   </script>
 </body>
 </html>
+
 
 
 
