--- a/index.html
+++ b/index.html
@@ -3,121 +3,156 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Тест: Куда тебе поехать в отпуск?</title>
+  <title>Подбор путешествия</title>
   <style>
     body {
-      font-family: "Arial", sans-serif;
-      background: #fff;
-      color: #000;
       margin: 0;
       padding: 0;
+      font-family: "Arial", sans-serif;
+      background-color: #ffffff;
+      color: #222;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      min-height: 100vh;
+      justify-content: center;
+      height: 100vh;
       text-align: center;
+      position: relative;
+      overflow: hidden;
     }
-    .container {
-      width: 90%;
-      max-width: 400px;
-    }
+
     h1 {
       font-size: 1.6rem;
-      margin-bottom: 1rem;
+      margin-bottom: 15px;
+      z-index: 2;
     }
+
+    p {
+      font-size: 1.1rem;
+      margin-bottom: 25px;
+      z-index: 2;
+    }
+
     .question {
       display: none;
-      margin-top: 1rem;
+      flex-direction: column;
+      align-items: center;
+      width: 90%;
+      max-width: 400px;
+      z-index: 2;
     }
-    .active {
-      display: block;
+
+    .question.active {
+      display: flex;
     }
+
     button {
-      background: #ffcc00;
+      background-color: #FFD633;
       border: none;
-      color: #000;
+      border-radius: 10px;
+      padding: 14px 20px;
+      margin: 8px 0;
       font-size: 1rem;
-      padding: 0.8rem 1.2rem;
-      margin: 0.4rem 0;
-      border-radius: 8px;
       cursor: pointer;
+      transition: background-color 0.2s ease;
       width: 100%;
-      transition: 0.2s;
+      z-index: 2;
     }
+
     button:hover {
-      background: #ffd633;
+      background-color: #ffcd00;
     }
-    .loading {
-      display: none;
-      font-size: 1.2rem;
+
+    /* Эмодзи-декор */
+    .emoji {
+      position: absolute;
+      font-size: 4rem;
+      opacity: 0.2;
+      z-index: 1;
+      user-select: none;
+      pointer-events: none;
     }
-    .result {
-      display: none;
-    }
-    @keyframes blink {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.4; }
-    }
-    .dots {
-      animation: blink 1s infinite;
+    .sakura { top: 10px; left: 10px; }
+    .maple { top: 10px; right: 10px; }
+    .snow { bottom: 10px; left: 10px; }
+    .eiffel { bottom: 5px; right: 10px; }
+
+    @media (max-width: 600px) {
+      .emoji { font-size: 3rem; }
+      h1 { font-size: 1.3rem; }
+      p { font-size: 1rem; }
+      button { font-size: 0.95rem; }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Куда тебе поехать в отпуск?</h1>
 
-    <div id="q1" class="question active">
-      <p>Что для тебя важнее всего в путешествии?</p>
-      <button onclick="nextQuestion(1)">Море и солнце ☀️</button>
-      <button onclick="nextQuestion(1)">Приключения 🌍</button>
-      <button onclick="nextQuestion(1)">Еда и культура 🍜</button>
-      <button onclick="nextQuestion(1)">Спокойствие и природа 🌲</button>
-    </div>
+  <!-- Эмодзи-декор -->
+  <div class="emoji sakura">🌸</div>
+  <div class="emoji maple">🍁</div>
+  <div class="emoji snow">❄️</div>
+  <div class="emoji eiffel">🗼</div>
 
-    <div id="q2" class="question">
-      <p>Сколько ты готов потратить на билет?</p>
-      <button onclick="nextQuestion(2)">До 10 000 ₽</button>
-      <button onclick="nextQuestion(2)">До 25 000 ₽</button>
-      <button onclick="nextQuestion(2)">Неважно 💸</button>
-    </div>
+  <!-- Контент -->
+  <div class="question active" id="q1">
+    <h1>✈️ Узнайте, куда вам стоит поехать в отпуск!</h1>
+    <h2>Что вам важнее всего на отдыхе?</h2>
+    <button onclick="nextQuestion(2)">Море и пляж ☀️</button>
+    <button onclick="nextQuestion(2)">Горы и природа 🌲</button>
+    <button onclick="nextQuestion(2)">Города и культура 🌍</button>
+    <button onclick="nextQuestion(2)">Еда и вечеринки 🍜</button>
+  </div>
 
-    <div id="q3" class="question">
-      <p>Когда планируешь отпуск?</p>
-      <button onclick="showLoading()">В ближайший месяц</button>
-      <button onclick="showLoading()">Осенью 🍂</button>
-      <button onclick="showLoading()">Зимой ❄️</button>
-      <button onclick="showLoading()">Просто смотрю варианты 👀</button>
-    </div>
+  <div class="question" id="q2">
+    <h1>Какой у вас бюджет на поездку?</h1>
+    <button onclick="nextQuestion(3)">До 50 000 ₽ 💸</button>
+    <button onclick="nextQuestion(3)">До 100 000 ₽ 💸💸</button>
+    <button onclick="nextQuestion(3)">Больше 100 000 ₽ 💸💸💸</button>
+  </div>
+  
+  <div class="question" id="q3">
+    <h1>Когда планируете отпуск?</h1>
+    <button onclick="nextQuestion(4)">Осенью 🍂</button>
+    <button onclick="nextQuestion(4)">Зимой ❄️</button>
+    <button onclick="nextQuestion(4)">Весной 🌸</button>
+    <button onclick="nextQuestion(4)">Летом ☀️</button>
+  </div>
+  
+  <div class="question" id="q4">
+    <h1>🔍 Подбираем лучшие направления...</h1>
+    <p>Секунду, анализируем предложения туроператоров и отелей 🧭</p>
+  </div>
 
-    <div id="loading" class="loading">
-      🔍 Подбираем лучшие направления<span class="dots">...</span>
-    </div>
-
-    <div id="result" class="result">
-      <h2>🎉 Тебе подойдут путешествия по Европе и Азии!</h2>
-      <p>Посмотри лучшие предложения прямо сейчас 👇</p>
-      <a href="https://travel.yandex.ru/" target="_blank">
-        <button>Посмотреть подборку</button>
-      </a>
-    </div>
+  <div class="question" id="q5">
+    <h1>Куда вам поехать в отпуск?</h1>
+    <p>🎉 Вам подойдут путешествия по России, Европе и Азии!<br>
+    Посмотрите лучшие предложения прямо сейчас 👇</p>
+    <button onclick="window.location.href='https://yandex.tpk.mx/r8zaqEhP';">
+      Посмотреть 👀
+    </button>
   </div>
 
   <script>
-    let current = 1;
+    let quizStarted = false;
+
     function nextQuestion(num) {
-      document.getElementById(`q${num}`).classList.remove("active");
-      document.getElementById(`q${num + 1}`).classList.add("active");
-    }
+      if (!quizStarted) {
+        quizStarted = true;
+        // через 1 минуту — редирект на Яндекс
+        setTimeout(() => {
+          window.location.href = "https://sletat.tpk.mx/IKJuwl2u";
+        }, 60000);
+      }
 
-    function showLoading() {
-      document.getElementById(`q3`).classList.remove("active");
-      document.getElementById("loading").style.display = "block";
-
-      setTimeout(() => {
-        document.getElementById("loading").style.display = "none";
-        document.getElementById("result").style.display = "block";
-      }, 2000);
+      document.querySelectorAll('.question').forEach(q => q.classList.remove('active'));
+      const next = document.getElementById('q' + num);
+      if (next) {
+        next.classList.add('active');
+        if (num === 4) {
+          // показать блок "подбираем..." на 2 секунды, затем финал
+          setTimeout(() => nextQuestion(5), 2000);
+        }
+      }
     }
   </script>
 </body>
